--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "cmd"
 version = "0.1.0"
@@ -11,3 +13,4 @@ derive = "1.0.0"
 dirs-next = "2.0.0"
 git2 = "0.19.0"
 lazy_static = "1.5.0"
+rusqlite = "0.32.1"
