--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ derive = "1.0.0"
 dirs-next = "2.0.0"
 git2 = "0.19.0"
 lazy_static = "1.5.0"
-rusqlite = "0.32.1"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
