--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ chrono = "0.4.39"
 clap = { version = "4.5.23", features = ["derive"] }
 clap_complete = "4.5.38"
 derive = "1.0.0"
-dirs-next = "2.0.0"
+directories = "5.0.1"
 git2 = "0.19.0"
 lazy_static = "1.5.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
+serde = { version = "1.0.216", features = ["derive"] }
