--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ derive = "1.0.0"
 directories = "5.0.1"
 git2 = "0.19.0"
 lazy_static = "1.5.0"
+open = "5.3.1"
 reqwest = { version = "0.12.9", features = ["blocking"] }
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 tokio = { version = "1.42.0", features = ["full"] }
