--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,22 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.39"
-clap = { version = "4.5.23", features = ["color", "derive", "suggestions"] }
-clap_complete = "4.5.38"
+clap = { version = "4.5.27", features = ["color", "derive", "suggestions"] }
+clap_complete = "4.5.44"
 clap_complete_nushell = "4.5.4"
 derive = "1.0.0"
-diesel = { version = "2.2.7", features = ["chrono", "sqlite"] }
+diesel = { version = "2.2.7", features = [
+  "chrono",
+  "sqlite",
+], default-features = false }
 directories = "6.0.0"
 git2 = "0.20.0"
 lazy_static = "1.5.0"
 open = "5.3.1"
 rand = "0.9.0"
-reqwest = { version = "0.12.9", features = ["blocking"] }
+reqwest = { version = "0.12.12", features = ["blocking"] }
 rusqlite = { version = "0.33.0", features = ["bundled"] }
-serde = { version = "1.0.216", features = ["derive"] }
-serde_json = "1.0.134"
-tokio = { version = "1.42.0", features = ["full"] }
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
+tokio = { version = "1.43.0", features = ["full"] }
 toml = "0.8.19"
