--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2024"
 chrono = "0.4.39"
 clap = { version = "4.5.28", features = ["color", "derive", "suggestions"]}
 clap_complete = "4.5.44"
-clap_complete_nushell = "4.5.4"
+clap_complete_nushell = "4.5.5"
 derive = "1.0.0"
 directories = "6.0.0"
 git2 = "0.20.0"
 lazy_static = "1.5.0"
-open = "5.3.1"
+open = "5.3.2"
 rand = "0.9.0"
 reqwest = { version = "0.12.12", features = ["blocking"] }
-libsqlite3-sys = { version = "*", features = ["bundled"] }
+libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
 diesel = { version = "2.2.7", features = [
   "chrono",
   "sqlite",
@@ -23,4 +23,4 @@ diesel = { version = "2.2.7", features = [
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
-toml = "0.8.19"
+toml = "0.8.20"
