Implemented initializing and running migrations on the db.
Updated: 2025-02-13 02:38:36

Changes:
- Ran cargo fmt.

Files Changed:
M Cargo.toml
M src/colors.rs
M src/commands/environment/mod.rs
M src/commands/greeting.rs
M src/database/mod.rs
M src/database/models/quote.rs
M src/database/sqlite/mod.rs
M src/main.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
 toml = "0.8.20"
+diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
